Changed the tab module into 2/3 + 1/3 grid

--- a/article.html
+++ b/article.html
@@ -480,171 +480,97 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 card ">
-                    <div id="exTabFirmeiVijesti" class="tabs_module firmeVijesti">
-                        <ul class="nav nav-pills tabs">
-                            <li class="active">
-                                <a href="#povezanefirme" data-toggle="tab">Povezane firme</a>
-                            </li>
-                            <li>
-                                <a href="#povezanevijesti" data-toggle="tab">Povezane vijesti</a>
-                            </li>
-                        </ul>
-                        <div class="tab-content clearfix">
-                            <div class="tab-pane active" id="povezanefirme">
-                                <div class="card-opis-vijesti">
-                                    <div class="col-md-4">
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="tabs_module firmeVijesti remargin">
 
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-                                        </li>
+                        <div class="col-md-8 nopadding">
+                            <div class="" style="    padding: 0 15px;">
+                                <h1 class="naslov-kolone ">Povezane vijesti</h1>
+                            </div>
+                            <div class="wrap-povezanih-vijesti">
+                                <div class="col-sm-6 col-md-6 card card-vijest">
+                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                    <div class="card-opis-vijesti">
+                                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                        <div class="card-count-label">
+                                            <p>100</p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-4">
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-                                        </li>
+                                </div>
+                                <div class="col-sm-6 col-md-6 card card-vijest ">
+                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                    <div class="card-opis-vijesti">
+                                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                        <div class="card-count-label">
+                                            <p>100</p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-4">
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                        </li>
-                                        <li>
-                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac</p>
-                                        </li>
+                                </div>
+                                <div class="col-sm-6 col-md-6 card card-vijest">
+                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                    <div class="card-opis-vijesti">
+                                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                        <div class="card-count-label">
+                                            <p>100</p>
+                                        </div>
                                     </div>
-                                    <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                </div>
+                                <div class="col-sm-6 col-md-6 card card-vijest">
+                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                    <div class="card-opis-vijesti">
+                                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                        <div class="card-count-label">
+                                            <p>100</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane" id="povezanevijesti">
-                                <div class="card-opis-vijesti">
-                                    <div class="col-sm-6 col-md-4 card card-vijest">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-md-4 card card-vijest ">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-md-4 card card-vijest">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-md-4 card card-vijest">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-md-4 card card-vijest">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 col-md-4 card card-vijest ">
-                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
-                                        <div class="card-opis-vijesti">
-                                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                                            <div class="card-count-label">
-                                                <p>100</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
+
+
+
+
+
+
+                        <div class="col-md-4 povezane_firme">
+                            <h1 class="naslov-kolone ">Povezane firme</h1>
+                            <div class="card-opis-vijesti">
+
+                                <li>
+                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                    <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                    <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                </li>
+                                <li>
+                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                                </li>
+                            </div>
+                        </div>
+
+
+                        <!--  <div class="col-xs-12">
+                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                    </div>-->
                     </div>
                 </div>
             </div>
