--- a/article.html
+++ b/article.html
@@ -28,6 +28,7 @@
 
     <!-- Custom styles for this template -->
     <link href="./css/main-style.css" rel="stylesheet">
+    <link href="./css/owl.carousel.css" rel="stylesheet">
 
     <script src="./js/ie-emulation-modes-warning.js"></script>
 
@@ -337,8 +338,10 @@
                                         <!-- Modal content-->
                                         <div class="modal-content">
                                             <div class="modal-body">
+
+
                                                 <div id="slikeCarousel" class="carousel slide" data-ride="carousel">
-                                                    <!-- Indicators -->
+
                                                     <ol class="carousel-indicators">
                                                         <li data-target="#slikeCarousel" data-slide-to="0" class="active"></li>
                                                         <li data-target="#slikeCarousel" data-slide-to="1"></li>
@@ -346,26 +349,26 @@
                                                         <li data-target="#slikeCarousel" data-slide-to="3"></li>
                                                     </ol>
 
-                                                    <!-- Wrapper for slides -->
+
                                                     <div class="carousel-inner" role="listbox">
                                                         <div class="item active">
-                                                            <img src="./images/dummy/pic1.jpg" alt="Chania">
+                                                            <img data-src="./images/dummy/pic1.jpg" src="./images/dummy/pic1.jpg" alt="Chania">
                                                         </div>
 
                                                         <div class="item">
-                                                            <img src="./images/dummy/pic2.jpg" alt="Chania">
+                                                            <img data-src="./images/dummy/pic2.jpg" src="" alt="Chania">
                                                         </div>
 
                                                         <div class="item">
-                                                            <img src="./images/dummy/pic3.jpg" alt="Flower">
+                                                            <img data-src="./images/dummy/pic3.jpg" src="" alt="Flower">
                                                         </div>
 
                                                         <div class="item">
-                                                            <img src="./images/dummy/pic4.jpg" alt="Flower">
+                                                            <img data-src="./images/dummy/pic4.jpg" src="" alt="Flower">
                                                         </div>
                                                     </div>
 
-                                                    <!-- Left and right controls -->
+
                                                     <a class="left carousel-control" href="#slikeCarousel" role="button" data-slide="prev">
                                                         <i class="fa fa-chevron-left" aria-hidden="true"></i>
                                                         <span class="sr-only">Previous</span>
@@ -375,6 +378,9 @@
                                                         <span class="sr-only">Next</span>
                                                     </a>
                                                 </div>
+
+
+
                                             </div>
                                         </div>
 
@@ -794,6 +800,7 @@
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
     <script src="./js/imagesLoaded.js"></script>
     <script src="./js/masonry.js"></script>
+    <script src="./js/owl.carousel.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
