--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="manifest" href="./images/favico/manifest.json">
     <link rel="mask-icon" href="./images/favico/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="./images/favico/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./images/favico/mstile-144x144.png">
     <meta name="msapplication-config" content="./images/favico/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <title>Akta</title>
