--- a/article.html
+++ b/article.html
@@ -430,7 +430,16 @@
                             <a id="preuzimanjeDokumenta" class="docDownload">nazivdokumenta.pdf</a>
                             <div class="separator"></div>
                             <div class="bottomToolbar">
-                                <span class="preuzmiDoc">PODJELI:  </span><span class="vijestOutreachIcon"></span>
+                                <div id="popover-content" class="hide">
+                                    <ul class="popovermenu">
+                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
+                                <span class="preuzmiDoc">PODJELI:  </span>
+                                <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops"></a>
                                 <span class="count">12345</span>
                                 <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAJ:</span>
                                 <i class="fa fa-bookmark" aria-hidden="true"></i>
@@ -488,99 +497,174 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-                    <div class="tabs_module firmeVijesti remargin">
+                <div class="col-xs-12 col-sm-12 col-md-12 card ">
+                    <div id="exTabFirmeiVijesti" class="tabs_module firmeVijesti">
+                        <ul class="nav nav-pills tabs">
+                            <li class="active">
+                                <a href="#povezanefirme" data-toggle="tab">Povezane firme</a>
+                            </li>
+                            <li>
+                                <a href="#povezanevijesti" data-toggle="tab">Povezane vijesti</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content clearfix">
+                            <div class="tab-pane active" id="povezanefirme">
+                                <div class="card-opis-vijesti">
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
 
-                        <div class="col-md-8 nopadding">
-                            <div class="" style="    padding: 0 15px;">
-                                <h1 class="naslov-kolone ">Povezane vijesti</h1>
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac</p>
+                                        </li>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="wrap-povezanih-vijesti">
-                                <div class="col-sm-6 col-md-6 card card-vijest">
-                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                    <div class="card-opis-vijesti">
-                                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                        <div class="card-count-label">
-                                            <p>100</p>
+                            <div class="tab-pane" id="povezanevijesti">
+                                <div class="card-opis-vijesti">
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-sm-6 col-md-6 card card-vijest ">
-                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
-                                    <div class="card-opis-vijesti">
-                                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                                        <div class="card-count-label">
-                                            <p>100</p>
+                                    <div class="col-sm-6 col-md-4 card card-vijest ">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-sm-6 col-md-6 card card-vijest">
-                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                    <div class="card-opis-vijesti">
-                                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                        <div class="card-count-label">
-                                            <p>100</p>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-sm-6 col-md-6 card card-vijest">
-                                    <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
-                                    <div class="card-opis-vijesti">
-                                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                                        <div class="card-count-label">
-                                            <p>100</p>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
                                         </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest ">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
-
-
-
-
-
-
-                        <div class="col-md-4 povezane_firme">
-                            <h1 class="naslov-kolone ">Povezane firme</h1>
-                            <div class="card-opis-vijesti">
-
-                                <li>
-                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                </li>
-                                <li>
-                                    <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                    <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                </li>
-                                <li>
-                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-
-                                </li>
-                                <li>
-                                    <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
-                                    <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
-
-                                </li>
-                                <li>
-                                    <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
-                                    <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
-                                </li>
-                            </div>
-                        </div>
-
-
-                        <!--  <div class="col-xs-12">
-                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
-                    </div>-->
                     </div>
                 </div>
+
             </div>
 
             <div class="hidden-xs ads">
