--- a/tenderi.html
+++ b/tenderi.html
@@ -327,78 +327,197 @@
 
 
                         </div>
-                        <div class="card-opis-vijesti">
-                            <p class="card-kategorija">Vijesti / SVIJET</p>
-                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                            <div class="separator"></div>
-                            <p class="toolbarVijesti">
-                                <span class="vijestiInfo">
-                                <span class="datumVijesti">15.01.2017.</span> / <span class="autorVijesti">Autor:</span> <span id="imeiprezimeautora">Ime i prezime</span>
-                                </span>
-                                <span class="toolbarIcons">
-                                <span class="vijestOutreachIcon"></span>
-                                <span class="count">12345</span>
-                                <i class="fa fa-print" aria-hidden="true"></i>
-                                <i class="fa fa-bookmark" aria-hidden="true"></i>
-                                </span>
-                            </p>
-                            <div class="separator"></div>
-                            <p class="sadrzajVijesti">
-                                <b>Lorem ipsum</b>
-                                <br> <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
-                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
-                                <br><br>
-                                <b>Lorem ipsum</b>
-                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
-                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
-                                <br><br>
-                                <b>Lorem ipsum</b>
-                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
-                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
-                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
-                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
-                                <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec cursus lacus. Maecenas sagittis est purus, vel porta arcu posuere sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus dictum
-                                dolor, id suscipit erat lacinia ut. Cras et lorem at diam egestas condimentum. Morbi odio mauris, interdum a mauris quis, accumsan tristique nisl. Phasellus sed imperdiet dui.
+                    </div>
 
-                            </p>
-                            <div class="separator"></div>
-                            <span class="preuzmiDoc">PREUZMI DOKUMENT:</span>
-                            <a id="preuzimanjeDokumenta" class="docDownload">nazivdokumenta.pdf</a>
-                            <div class="separator"></div>
-                            <div class="bottomToolbar">
-                                <div id="popover-content" class="hide">
-                                    <ul class="popovermenu">
-                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
-                                <span class="preuzmiDoc">PODJELI:  </span>
-                                <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops"></a>
-                                <span class="count">12345</span>
-                                <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAJ:</span>
-                                <i class="fa fa-bookmark" aria-hidden="true"></i>
-                                <br><br>
-                                <span class="preuzmiDoc">TAGOVI:  </span><span class="count tag">
-                                    <a>Vijesti</a>
-                                    <a>Investicije</a>
-                                    <a>Svijet</a>
-                                    <a>Konzum</a>
-                                    <a>Prodaja</a>
-                                    </span>
-                            </div>
-                            <div class="separator"></div>
-                            <p id="brojKomentara" class="brojKomentara"><span>0</span> komentara</p>
-                            <div clss="unosKomentara">
-                                <span><img src="http://placehold.it/50x50"></span><textarea class="poljeKomentar" rows="3" cols="50">
-                                    </textarea>
+                </div>
+                <div class="col-md-12 row-istih-visina nopadding">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 card ">
+                        <div class="card-opis-vijesti">
+                            <h1 class="card-naslov-vijesti">Najveća baza tendera</h1>
+                            <p><b>Tražite najnovije tendere? Zelite ojaviti tender?</b> <br>Na pravom ste mjestu! Akta tim Vam nudi najbolje mogućnosti za Vaše bolje poslovanje. Detaljna pretraga vam omogućava da nađete tendere koji najviše odgovaraju vašim
+                                potrebama.
+                                <br>
+                                <span style="color:#00B496;"><b>Registrujte se i testirajte besplatno</b></span> sve mogućnosti koje nudimo.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 card ">
+                        <div class="card-tenderi-pretraga">
+                            <div class="card-opis-vijesti">
+                                <h1 class="card-naslov-vijesti tenderi">PRETRAGA TENDERA</h1>
+
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 card ">
+                    <div id="exTabFirmeiVijesti" class="tabs_module firmeVijesti">
+                        <ul class="nav nav-pills tabs">
+                            <li class="active">
+                                <a href="#povezanefirme" data-toggle="tab">Povezane firme</a>
+                            </li>
+                            <li>
+                                <a href="#povezanevijesti" data-toggle="tab">Povezane vijesti</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content clearfix">
+                            <div class="tab-pane active" id="povezanefirme">
+                                <div class="card-opis-vijesti">
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
 
-                <div class="col-xs-12 col-sm-12 col-md-12 card ">
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+                                        </li>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">KONZUM d.o.o. Sarajevo</h1>
+                                            <p class="card-kategorija adresa-firme">Rajlovačka bb, Sarajevo </p>
+
+                                        </li>
+                                        <li>
+                                            <h1 class="card-naslov-vijesti naziv-firme">Lactalis BH d.o.o. Gradačac</h1>
+                                            <p class="card-kategorija adresa-firme">Željeznička bb, 76250 Gradačac</p>
+                                        </li>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="povezanevijesti">
+                                <div class="card-opis-vijesti">
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest ">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic4.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 card card-vijest ">
+                                        <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic5.jpg">
+                                        <div class="card-opis-vijesti">
+                                            <p class="card-kategorija">Vijesti / SVIJET</p>
+                                            <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                            <div class="card-count-label">
+                                                <p>100</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 card ">
                     <div id="exTabFirmeiVijesti" class="tabs_module firmeVijesti">
                         <ul class="nav nav-pills tabs">
                             <li class="active">
