Tenderi-pretraga page completed

--- a/tenderi.html
+++ b/tenderi.html
@@ -397,7 +397,7 @@
                                         </li>
                                     </div>
                                     <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                        <a class="viseVijesti">VIŠE +</a>
                                     </div>
                                 </div>
                             </div>
@@ -434,7 +434,7 @@
                                         </li>
                                     </div>
                                     <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                        <a class="viseVijesti">VIŠE +</a>
                                     </div>
                                 </div>
                             </div>
@@ -486,7 +486,7 @@
                                         </li>
                                     </div>
                                     <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                        <a class="viseVijesti">VIŠE +</a>
                                     </div>
                                 </div>
                             </div>
@@ -523,7 +523,7 @@
                                         </li>
                                     </div>
                                     <div class="col-xs-12">
-                                        <a class="viseVijesti">VIŠE POVEZANIH VIJESTI +</a>
+                                        <a class="viseVijesti">VIŠE +</a>
                                     </div>
                                 </div>
                             </div>
@@ -559,7 +559,10 @@
             </div>
         </div>
         -->
-
+        <div class="container-fluid footer-cta">
+            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BEPLATNO!</h1>
+            <a class="footer-cta-button">REGISTRUJ SE</a>
+        </div>
         <div class="container-fluid footer-menu">
             <div class="container">
                 <div class="row">
